fix(mobile): shrink album cover and align with waveform on profile

--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -204,7 +204,7 @@
   }
 
   @include mobile {
-    flex-direction: column;
+    flex-direction: row;
     padding: 10px;
   }
 }
@@ -256,10 +256,9 @@
   }
 
   @include mobile {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    aspect-ratio: 1;
+    width: 80px;
+    height: 80px;
+    min-width: 80px;
   }
 }
 
@@ -273,8 +272,9 @@
   margin-left: 10px;
 
   @include mobile {
-    margin-left: 0;
-    margin-top: 10px;
+    margin-left: 8px;
+    margin-top: 0;
+    flex: 1;
   }
 }
 
